# licence_plates_recognition

./: .pre-commit-config.yaml  README.md  cli.py  pyproject.toml
.dvc/: config
.github/workflows/: pre-commit.yml
app/: __init__.py
configs/: data.yaml  inference.yaml  model.yaml  tracking.yaml  trainer.yaml  training.yaml
data/: test.dvc  train.dvc
models/: __init__.py  model.ckpt.dvc
recognition_app/: infer.py  train.py
recognition_app/helpers/: __init__.py  data.py  models.py  transforms.py  utils.py
utils/: __init__.py
